kubernetes/02-apps/pihole/service-nodeport.yaml
# kubernetes/02-apps/pihole/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-nodeport
  namespace: homelab
  labels:
    app.kubernetes.io/name: pihole
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: pihole
  ports:
    - name: dns-tcp
      port: 53
      targetPort: dns-tcp
      protocol: TCP
      nodePort: 30053
    - name: dns-udp
      port: 53
      targetPort: dns-udp
      protocol: UDP
      nodePort: 30053
    - name: http-webui
      port: 80
      targetPort: http-webui
      protocol: TCP
      nodePort: 30080
